# agniparthene

./: .gitignore  config.py  local_build.sh  main.py  netlify.toml  package-lock.json  package.json  pyproject.toml  tailwind.config.js
src/static/css/: styles.css
src/templates/: base.html  index.html
