[project]
name = "agniparthene"
version = "1.0.0"
description = "Static website for the Agni Parthene hymn by St. Nectarios of Aegina"
requires-python = ">=3.11"
dependencies = [
    "hardboiled @ git+https://github.com/byzantime/hardboiled.git",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
